# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import publicationsRouter from "./publications";
 import authRouter from "./auth";
 import storageRouter from "./storage";
+import editorialRouter from "./editorial";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(publicationsRouter);
 router.use(authRouter);
 router.use(storageRouter);
+router.use(editorialRouter);
 
 export default router;
